--- a/css/small.css
+++ b/css/small.css
@@ -118,7 +118,9 @@ nav ul{
     text-decoration: underline solid 6px;
 }
 .hero-container{
-    margin: 0 0 25px 0;
+    margin: 0 0 27px 0;
+    height: fit-content;
+    width: fit-content;
 }
 .hero-container img{
     object-fit: fill;
@@ -141,7 +143,7 @@ nav ul{
     background-color: rgb(110, 0, 0);
 }
 .core-values{
-    margin: 45px 0 0 0;
+    margin: 20px 0 0 0;
     display: flex;
     flex-direction: column;
     box-shadow: 1px 2px 4px 1px black;
