--- a/css/small.css
+++ b/css/small.css
@@ -1,14 +1,35 @@
 body {
     display: flex;
     flex-direction: column;
+    font-size: 18px;
     row-gap: 15px;
     background-color:rgba(112, 112, 112, 0.336);
 }
 h1, h2, h3, h4, span{
     font-family: 'Roboto';
 }
+h1{
+    font-size: 1em;
+}
+h2{
+    font-size: .8em;
+}
+h3{
+    font-size: .6em;
+}
 p, a{
     font-family: 'Noto Sans Display';
+    font-size: .6em;
+}
+.header{
+    margin: -40px 0 -100px;
+}
+.header img{
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+    max-height: 400px;
+
 }
 #nav-icon{
     width: 60px;
@@ -97,9 +118,11 @@ nav ul{
     padding: 0;
     display: none;
     flex-direction: column;
+    row-gap: 5px;
     position: absolute;
-    width: 40%;
+    width: 100px;
     right: 20px;
+    top: 100px;
 }
 .nav-item {
     display: flex;
@@ -118,32 +141,52 @@ nav ul{
     text-decoration: underline solid 6px;
 }
 .hero-container{
-    margin: 0 0 27px 0;
-    height: fit-content;
-    width: fit-content;
+    margin: auto;
+    display: inline-block;
 }
 .hero-container img{
-    object-fit: fill;
+    object-fit: cover;
     object-position: center;
     width: 100%;
+    height: 100%;
     box-shadow: 1px 2px 4px 1px black;
 }
 .hero-text{
-    margin: -50px 0 0 0;
     display: flex;
-    justify-content: space-around;
+    margin: -80px 0 0 0;
+    width: 100%;
+    height: fit-content;
+    font-size: 26px;
+}
+.hero-buttons{
+    display: flex;
+    flex-grow: 1;
+    column-gap: 10px;;
+}
+.hero-button{
+    flex: 1;
+    display: flex;
 }
 .hero-button a{
+    text-align: center;
+    flex: 1;
     padding: 20px;
-    background-color: rgb(8, 8, 48);
     color: white;
     text-decoration: none;
+}
+.hero-button a{
+    background-color: rgb(8, 8, 48);
 }
 .hero-button a:hover{
     background-color: rgb(110, 0, 0);
 }
+.rotated-caret{
+    margin-left: 9px;
+    transform: rotate(-180deg);
+    transition: .15s ease-in-out;
+}
 .core-values{
-    margin: 20px 0 0 0;
+    margin: 33px 0 0 0;
     display: flex;
     flex-direction: column;
     box-shadow: 1px 2px 4px 1px black;
@@ -160,10 +203,6 @@ nav ul{
     display: flex;
     flex-direction: column;
 }
-.core-value.expanded{
-    display: flex;
-    flex-direction: row;
-}
 .core-value-heading{
     flex: 1;
     background-color: rgb(110, 0, 0);
@@ -175,6 +214,13 @@ nav ul{
 }
 .value-info{
     display:none;
+}
+.more-info-heading{
+    margin: 0;
+    flex: 1;
+    background-color: rgb(8, 8, 48);
+    padding: 15px;
+    color: white;
 }
 .footer{
     background: rgb(8, 8, 48);
@@ -192,17 +238,6 @@ nav ul{
     display: flex;
     flex-direction: column;
     row-gap: 10px;
-}
-.contact-info span{
-    margin-left: 28%;
-    text-align: left;
-}
-.social-media{
-    text-align: left;
-}
-.social-media span{
-    text-align: left;
-    margin-left: 28%;
 }
 .fa {
     margin-right: 10px;
