--- a/css/small.css
+++ b/css/small.css
@@ -144,7 +144,8 @@ nav ul{
     text-decoration: underline solid 6px;
 }
 .hero-container{
-    margin: auto;
+    margin: 0 0 30px;
+    align-self: center;
     display: inline-block;
 }
 .hero-container img{
@@ -189,7 +190,9 @@ nav ul{
     transition: .15s ease-in-out;
 }
 .core-values{
-    margin: 33px 0 0 0;
+    margin: 0 auto;
+    max-width: 960px;
+    text-align: center;
     display: flex;
     flex-direction: column;
     box-shadow: 1px 2px 4px 1px black;
