--- a/css/large.css
+++ b/css/large.css
@@ -31,4 +31,7 @@
     .hero-container img:hover{
         box-shadow: 1px 3px 5px 1px black;
     }
+    .darnell-div{
+        text-align: center;
+    }
 }
