--- a/css/small.css
+++ b/css/small.css
@@ -283,7 +283,7 @@ nav ul{
     margin: 15px;
 }
 .darnell-img{
-    width: 100%;
+    margin: auto;
     object-fit: contain;
     object-position: center;
 }
