--- a/css/small.css
+++ b/css/small.css
@@ -144,11 +144,12 @@ nav ul{
     text-decoration: underline solid 6px;
 }
 .hero-container{
-    margin: 0 0 30px;
+    margin: 0 0 10px;
     align-self: center;
     display: inline-block;
 }
 .hero-container img{
+    margin: 0 auto;
     object-fit: cover;
     object-position: center;
     width: 100%;
@@ -156,7 +157,7 @@ nav ul{
     box-shadow: 1px 2px 4px 1px black;
 }
 .hero-text{
-    display: flex;
+    display: none;
     margin: -80px 0 0 0;
     width: 100%;
     height: fit-content;
@@ -173,7 +174,6 @@ nav ul{
 }
 .hero-button a{
     text-align: center;
-    flex: 1;
     padding: 20px;
     color: white;
     text-decoration: none;
