--- a/css/large.css
+++ b/css/large.css
@@ -8,6 +8,7 @@
     nav ul{
         margin: 0;
         width: 100%;
+        height: 50px;
         right: 0px;
         top: 0px;
         display: flex;
