--- a/css/small.css
+++ b/css/small.css
@@ -123,7 +123,8 @@ nav ul{
     flex-direction: column;
     row-gap: 5px;
     position: absolute;
-    width: 100px;
+    width: 25%;
+    height: 25%;
     right: 20px;
     top: 100px;
 }
