--- a/css/small.css
+++ b/css/small.css
@@ -158,6 +158,7 @@ nav ul{
     box-shadow: 1px 2px 4px 1px black;
 }
 .hero-text{
+    width: fit-content;
     position: relative;
     top: -80px;
     bottom: 0px;
