--- a/css/css.css
+++ b/css/css.css
@@ -1,3 +1,37 @@
+@font-face{
+    font-family:'Roboto';
+    font-style:normal;
+    font-weight:700;
+    font-display:swap;
+    src:url(https://fonts.gstatic.com/s/roboto/v29/KFOlCnqEu92Fr1MmWUlfBxc4EsA.woff2) format('woff2');
+    unicode-range:U+0370-03FF;
+}
+@font-face{
+    font-family:'Roboto';
+    font-style:normal;
+    font-weight:700;
+    font-display:swap;
+    src:url(https://fonts.gstatic.com/s/roboto/v29/KFOlCnqEu92Fr1MmWUlfBBc4.woff2) format('woff2');
+    unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+}
+@font-face{
+    font-family:'Noto Sans Display';
+    font-style:normal;
+    font-weight:400;
+    font-stretch:100%;
+    font-display:swap;
+    src:url(https://fonts.gstatic.com/s/notosansdisplay/v10/RLpbK4fy6r6tOBEJg0IAKzqdFZVZxpMkXJMhnB9XjO1o90LuV-PT4Doq_AKp_3cKZTWa2xHr.woff2) format('woff2');
+    unicode-range:U+0370-03FF
+}
+@font-face{
+    font-family:'Noto Sans Display';
+    font-style:normal;
+    font-weight:400;
+    font-stretch:100%;
+    font-display:swap;
+    src:url(https://fonts.gstatic.com/s/notosansdisplay/v10/RLpbK4fy6r6tOBEJg0IAKzqdFZVZxpMkXJMhnB9XjO1o90LuV-PT4Doq_AKp_3cKZTaa2w.woff2) format('woff2');
+    unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+}
 body {
     display: flex;
     flex-direction: column;
@@ -280,4 +314,48 @@ nav ul{
     margin: auto;
     object-fit: contain;
     object-position: center;
+}
+@media screen and (min-width: 600px){
+    body{
+        font-size: 22px;
+    }
+}
+@media screen and (min-width: 960px) {
+    body{
+        font-size: 26px;
+    }
+    #nav-icon{
+        display: none;
+    }
+    nav ul{
+        margin: 0;
+        width: 100%;
+        height: 50px;
+        right: 0px;
+        top: 0px;
+        display: flex;
+        flex-direction: row;
+    }
+    nav ul li{
+        flex: 1;
+    }
+    .nav-item a{
+        padding: 15px;
+    }
+    .main{
+        text-align: center;
+    }
+    .hero-container{
+        width: fit-content;
+        text-align: left;
+    }
+    .hero-container img{
+        margin: 0 auto;
+    }
+    .hero-container img:hover{
+        box-shadow: 1px 3px 5px 1px black;
+    }
+    .darnell-div{
+        text-align: center;
+    }
 }
