--- a/css/css.css
+++ b/css/css.css
@@ -334,6 +334,7 @@ nav ul{
         right: 0px;
         top: 0px;
         display: flex;
+        position: fixed;
         flex-direction: row;
     }
     nav ul li{
