--- a/css/css.css
+++ b/css/css.css
@@ -310,10 +310,15 @@ nav ul{
 .darnell-div-header{
     width: 100%;
     margin: 15px;
+    text-align: left;
+}
+.darnell-div-header span{
+    margin: 0 50px 0 10px;
 }
 .darnell-div-header h2{
     display: inline-block;
-    margin: 0 0 0 0;
+    margin: 0 auto;
+    text-align: center;
 }
 .darnell-div > div{
     flex:1;
