--- a/css/css.css
+++ b/css/css.css
@@ -309,23 +309,21 @@ nav ul{
 }
 .darnell-div-header{
     width: 100%;
-    margin: 15px;
     text-align: left;
 }
 .darnell-div-header span{
-    margin: 0 50px 0 10px;
+    margin: 0 6% 0 5%;
 }
 .darnell-div-header h2{
     display: inline-block;
-    margin: 0 auto;
+    margin: 20px 0 20px 0;
     text-align: center;
 }
 .darnell-div > div{
-    flex:1;
+    flex: 1 auto;
     background-color: rgb(110, 0, 0);
     color: #ffffff;
     box-shadow: 0px 1px 4px 1px black;
-    margin: 0 20px 0 20px;
 }
 .darnell-div div p{
     text-align: center;
@@ -335,7 +333,7 @@ nav ul{
     margin: 0 auto;
     padding: 10px 0 10px 0;
 }
-.darnell-div > div:hover{
+.darnell-div-header:hover{
     cursor: pointer;
     background-color: rgb(8, 8, 48);
 }
