--- a/css/css.css
+++ b/css/css.css
@@ -286,10 +286,8 @@ nav ul{
     text-decoration: none;
 }
 /*donate page*/
-.main iframe{
-    width: 100%;
-    min-width: 400px;
-    height: 1600px;
+.donations{
+    height: 1400px;
 }
 /*About page*/
 .darnell-main{
@@ -356,6 +354,9 @@ nav ul{
     body{
         font-size: 22px;
     }
+    .donations{
+        height:1210px;
+    }
 }
 @media screen and (min-width: 960px) {
     body{
@@ -395,5 +396,8 @@ nav ul{
     }
     .darnell-div{
         text-align: center;
+    }
+    .donations{
+        height: 1000px;
     }
 }
