--- a/css/css.css
+++ b/css/css.css
@@ -362,9 +362,13 @@ nav ul{
 }
 .darnell-img{
     box-shadow: 0px 1px 4px 1px black;
-    margin: auto;
+    margin: 0 auto;
     object-fit: contain;
     object-position: center;
+    width: 100%;
+    height: 100%;
+    min-width: 300px;
+    max-width: 600px;
 }
 @media screen and (min-width: 600px){
     body{
