--- a/css/css.css
+++ b/css/css.css
@@ -293,17 +293,16 @@ nav ul{
     color: rgb(110, 0, 0);
     margin: 0 auto;
     text-align: center;
-    background-image: url("../images/darnell-patriotic.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 800px;
-    height: 400px;
 }
 .thankYou h1{
-    margin: 30% 0 0 0;
-    text-shadow: 0px 1px 4px black;
     font-size: 1.4em;
+}
+.thankYou img{
+    object-position:center;
+    object-fit: contain;
+    height: 100%;
+    width: 100%;
+    max-width: 400px;
 }
 /*About page*/
 .darnell-main{
@@ -419,5 +418,8 @@ nav ul{
     }
     .donations{
         min-height: 1100px;
+    }
+    .thankYou img{
+        max-width: 500px;
     }
 }
